# prescan-runner

./: .gitignore  LICENSE  README.md  pyproject.toml
dist_2/: prescan_runner-1.0-py3-none-any.whl
example/: startup.m
libs/generic/: generateCompilationSheet.m  runExperiment.m  runExperimentFromOSC.m
matutils/: matlib.py
parser/: parser_compiled_csv.py
src/prescan_runner/: runner.py
src/prescan_runner.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/prescan_runner/libs/generic/: generateCompilationSheet.m  runExperiment.m  runExperimentFromOSC.m  runExperimentFromPb.m
src/prescan_runner/matutils/: matlib.py
src/prescan_runner/parser/: parser.py
